tests/baselines/reference/customMetadataDecorator.globalIdentifier.2.errors.txt
tests/cases/conformance/decorators/decoratorMetadata/main.ts(1,1): error TS1433: Unable to resolve signature of implicit decorator 'metadata' when called as an expression.
  Cannot find name 'metadata'. Did you mean 'metadat'?
tests/cases/conformance/decorators/decoratorMetadata/main.ts(3,5): error TS1433: Unable to resolve signature of implicit decorator 'metadata' when called as an expression.
  Cannot find name 'metadata'. Did you mean 'metadat'?
tests/cases/conformance/decorators/decoratorMetadata/main.ts(7,5): error TS1433: Unable to resolve signature of implicit decorator 'metadata' when called as an expression.
  Cannot find name 'metadata'. Did you mean 'metadat'?
tests/cases/conformance/decorators/decoratorMetadata/main.ts(8,12): error TS1433: Unable to resolve signature of implicit decorator 'metadata' when called as an expression.
  Cannot find name 'metadata'. Did you mean 'metadat'?
tests/cases/conformance/decorators/decoratorMetadata/main.ts(10,5): error TS1433: Unable to resolve signature of implicit decorator 'metadata' when called as an expression.
  Cannot find name 'metadata'. Did you mean 'metadat'?


==== tests/cases/conformance/decorators/decoratorMetadata/global.d.ts (0 errors) ====
    declare const metadat: any;
    declare const dec: any;
==== tests/cases/conformance/decorators/decoratorMetadata/main.ts (5 errors) ====
    @dec
    ~~~~
!!! error TS1433: Unable to resolve signature of implicit decorator 'metadata' when called as an expression.
!!! error TS1433:   Cannot find name 'metadata'. Did you mean 'metadat'?
!!! related TS2728 tests/cases/conformance/decorators/decoratorMetadata/global.d.ts:1:15: 'metadat' is declared here.
    class C {
        @dec x!: number;
        ~~~~
!!! error TS1433: Unable to resolve signature of implicit decorator 'metadata' when called as an expression.
!!! error TS1433:   Cannot find name 'metadata'. Did you mean 'metadat'?
!!! related TS2728 tests/cases/conformance/decorators/decoratorMetadata/global.d.ts:1:15: 'metadat' is declared here.
    
        constructor(x: number) {}
    
        @dec
        ~~~~
!!! error TS1433: Unable to resolve signature of implicit decorator 'metadata' when called as an expression.
!!! error TS1433:   Cannot find name 'metadata'. Did you mean 'metadat'?
!!! related TS2728 tests/cases/conformance/decorators/decoratorMetadata/global.d.ts:1:15: 'metadat' is declared here.
        method(@dec x: number): string { return ""; }
               ~~~~
!!! error TS1433: Unable to resolve signature of implicit decorator 'metadata' when called as an expression.
!!! error TS1433:   Cannot find name 'metadata'. Did you mean 'metadat'?
!!! related TS2728 tests/cases/conformance/decorators/decoratorMetadata/global.d.ts:1:15: 'metadat' is declared here.
    
        @dec
        ~~~~
!!! error TS1433: Unable to resolve signature of implicit decorator 'metadata' when called as an expression.
!!! error TS1433:   Cannot find name 'metadata'. Did you mean 'metadat'?
!!! related TS2728 tests/cases/conformance/decorators/decoratorMetadata/global.d.ts:1:15: 'metadat' is declared here.
        get accessor(): string { return ""; }
    }